// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewPane initialized with no book selected renders correctly 1`] = `
<div
  class="column enm-pane enm-pane-preview"
  style="display: none;"
>
  <div
    class="message is-valign is-centered"
    id="message"
  >
    <p
      class="message-body has-text-centered"
    >
      
            Choose a book at left to view matched pages, or
            
      <br />
       
      <a
        href="#"
        id="load-first-matched-page-link"
      >
        
                Load the first matched page
            
      </a>
    </p>
  </div>
   
  <div>
    <!---->
     
    <barchart-stub
      barchartdata=""
      title=""
    />
     
    <h2
      class="is-size-4"
      id="preview-epub-error"
      style="display: none;"
    >
      
            Sorry, this book cannot be previewed due to a server error.
            Please try your search again later.
        
    </h2>
     
    <div
      class="enm-topicsonthispage"
      style="display: none;"
    >
      <h3>
        Topics on this page
      </h3>
       
      <ul />
       
      <div
        class="enm-notopics"
      >
        
                No topics are associated with this page.
            
      </div>
    </div>
     
    <hr />
     
    <h2
      class="is-size-4"
      id="preview-epub-page-error"
      style="display: none;"
    >
      
            Sorry, these pages cannot be previewed due to a server error.
            Please try your search again later.
        
    </h2>
     
    <div
      class="enm-pageText"
      style="display: none;"
    />
  </div>
</div>
`;

exports[`PreviewPane when BarChart emits a "bar-click" event for a page hit with highlights in both page text and topic names renders preview correctly 1`] = `
<div
  class="column enm-pane enm-pane-preview"
  style=""
>
  <div
    class="message is-valign is-centered"
    id="message"
    style="display: none;"
  >
    <p
      class="message-body has-text-centered"
    >
      
            Choose a book at left to view matched pages, or
            
      <br />
       
      <a
        href="#"
        id="load-first-matched-page-link"
      >
        
                Load the first matched page
            
      </a>
    </p>
  </div>
   
  <div>
    <span
      id="preview-isbn"
      name="9781111111111"
      style="display: none;"
    />
     
    <barchart-stub
      barchartdata=""
      title="The Book"
    />
     
    <h2
      class="is-size-4"
      id="preview-epub-error"
      style="display: none;"
    >
      
            Sorry, this book cannot be previewed due to a server error.
            Please try your search again later.
        
    </h2>
     
    <div
      class="enm-topicsonthispage"
      style=""
    >
      <h3>
        Topics on this page
      </h3>
       
      <ul>
        <li>
          <a
            href="#"
          >
            <mark>
              Lorem
            </mark>
             
            <mark>
              ipsum
            </mark>
             dolor 
            <span
              class="enm-alt-names"
            >
              (also: dolor • L.I. • L.I.D. • LID • 
              <mark>
                Lorem
              </mark>
               
              <mark>
                Ipsum
              </mark>
               • 
              <mark>
                Lorem
              </mark>
               
              <mark>
                Ipsum
              </mark>
               (L.I.) • 
              <mark>
                Lorem
              </mark>
               
              <mark>
                Ipsum
              </mark>
               (LI))
            </span>
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            vitae
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            maximus
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            felis
          </a>
        </li>
      </ul>
       
      <!---->
    </div>
     
    <hr />
     
    <h2
      class="is-size-4"
      id="preview-epub-page-error"
      style="display: none;"
    >
      
            Sorry, these pages cannot be previewed due to a server error.
            Please try your search again later.
        
    </h2>
     
    <div
      class="enm-pageText"
      style=""
    >
      <mark>
        Lorem
      </mark>
       
      <mark>
        ipsum
      </mark>
       dolor sit amet, consectetur adipiscing elit. Curabitur pretium 
      <mark>
        lorem
      </mark>
       elit, in lobortis erat posuere at. Ut a nulla iaculis, tristique tortor at, consectetur arcu. Donec consectetur purus ligula, ac congue diam eleifend at. Nulla semper 
      <mark>
        lorem
      </mark>
       sit amet quam vulputate pharetra. Quisque a tincidunt urna. Quisque dapibus condimentum felis, lobortis sagittis purus hendrerit vitae. Mauris augue libero, blandit ac orci quis, congue porta nibh. Phasellus nec tellus auctor, tincidunt eros vitae, maximus arcu.

Integer eu euismod sapien, vitae condimentum risus. Donec ut porttitor nunc, at sodales ante. Curabitur felis nisl, aliquet vel 
      <mark>
        lorem
      </mark>
       in, faucibus dignissim nibh. Cras lacinia pharetra purus a tempus. Fusce quam velit, imperdiet quis velit vel, dignissim hendrerit arcu. Cras iaculis consequat urna ut vehicula. Nunc et leo eget tellus faucibus rhoncus nec ac velit. Cras scelerisque elementum ex non volutpat. Ut aliquet lectus et neque fermentum tempor.

Phasellus sed orci ac arcu lacinia volutpat. Proin semper pharetra turpis in rhoncus. Fusce nulla leo, ornare quis lobortis ac, ornare at ex. Donec gravida ut sem ut elementum. Vivamus porttitor nibh sed accumsan mollis. Nunc eu blandit felis. Sed laoreet lectus id nisl tempus consequat. Praesent ullamcorper porta mollis.

Nulla facilisis lectus vitae magna molestie, sit amet interdum sem pretium. Fusce pharetra aliquam metus in finibus. Maecenas efficitur dapibus dui non posuere. Fusce tristique turpis arcu, vitae congue massa ornare in. Etiam et luctus nisi. Integer sem magna, fringilla at dui consequat, congue condimentum purus. Aliquam sit amet vulputate nunc. Proin accumsan diam vel consequat vehicula. Quisque magna odio, vestibulum molestie metus non, sollicitudin semper quam.

Sed et sodales orci, sed laoreet eros. Vestibulum viverra lacus accumsan turpis tristique convallis. 
      <mark>
        Lorem
      </mark>
       
      <mark>
        ipsum
      </mark>
       dolor sit amet, consectetur adipiscing elit. 
      <mark>
        Lorem
      </mark>
       
      <mark>
        ipsum
      </mark>
       dolor sit amet, consectetur adipiscing elit. Sed vitae faucibus neque. Morbi blandit felis quis fringilla auctor. Fusce mi erat, imperdiet pharetra elit vel, pulvinar facilisis elit. Nulla aliquam magna sed ligula mattis tempor. Quisque rutrum est sit amet 
      <mark>
        ipsum
      </mark>
       posuere, auctor facilisis nisi accumsan. Proin ultricies justo in tortor pharetra consequat. Suspendisse potenti. Praesent interdum nunc sed enim gravida porta.
    </div>
  </div>
</div>
`;

exports[`PreviewPane when BarChart emits a "bar-click" event for a page hit with highlights in page text only renders preview correctly 1`] = `
<div
  class="column enm-pane enm-pane-preview"
  style=""
>
  <div
    class="message is-valign is-centered"
    id="message"
    style="display: none;"
  >
    <p
      class="message-body has-text-centered"
    >
      
            Choose a book at left to view matched pages, or
            
      <br />
       
      <a
        href="#"
        id="load-first-matched-page-link"
      >
        
                Load the first matched page
            
      </a>
    </p>
  </div>
   
  <div>
    <span
      id="preview-isbn"
      name="9781111111111"
      style="display: none;"
    />
     
    <barchart-stub
      barchartdata=""
      title="The Book"
    />
     
    <h2
      class="is-size-4"
      id="preview-epub-error"
      style="display: none;"
    >
      
            Sorry, this book cannot be previewed due to a server error.
            Please try your search again later.
        
    </h2>
     
    <div
      class="enm-topicsonthispage"
      style=""
    >
      <h3>
        Topics on this page
      </h3>
       
      <ul>
        <li>
          <a
            href="#"
          >
            Lorem ipsum dolor
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            vitae
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            maximus
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            felis
          </a>
        </li>
      </ul>
       
      <!---->
    </div>
     
    <hr />
     
    <h2
      class="is-size-4"
      id="preview-epub-page-error"
      style="display: none;"
    >
      
            Sorry, these pages cannot be previewed due to a server error.
            Please try your search again later.
        
    </h2>
     
    <div
      class="enm-pageText"
      style=""
    >
      <mark>
        Lorem
      </mark>
       
      <mark>
        ipsum
      </mark>
       dolor sit amet, consectetur adipiscing elit. Curabitur pretium 
      <mark>
        lorem
      </mark>
       elit, in lobortis erat posuere at. Ut a nulla iaculis, tristique tortor at, consectetur arcu. Donec consectetur purus ligula, ac congue diam eleifend at. Nulla semper 
      <mark>
        lorem
      </mark>
       sit amet quam vulputate pharetra. Quisque a tincidunt urna. Quisque dapibus condimentum felis, lobortis sagittis purus hendrerit vitae. Mauris augue libero, blandit ac orci quis, congue porta nibh. Phasellus nec tellus auctor, tincidunt eros vitae, maximus arcu.

Integer eu euismod sapien, vitae condimentum risus. Donec ut porttitor nunc, at sodales ante. Curabitur felis nisl, aliquet vel 
      <mark>
        lorem
      </mark>
       in, faucibus dignissim nibh. Cras lacinia pharetra purus a tempus. Fusce quam velit, imperdiet quis velit vel, dignissim hendrerit arcu. Cras iaculis consequat urna ut vehicula. Nunc et leo eget tellus faucibus rhoncus nec ac velit. Cras scelerisque elementum ex non volutpat. Ut aliquet lectus et neque fermentum tempor.

Phasellus sed orci ac arcu lacinia volutpat. Proin semper pharetra turpis in rhoncus. Fusce nulla leo, ornare quis lobortis ac, ornare at ex. Donec gravida ut sem ut elementum. Vivamus porttitor nibh sed accumsan mollis. Nunc eu blandit felis. Sed laoreet lectus id nisl tempus consequat. Praesent ullamcorper porta mollis.

Nulla facilisis lectus vitae magna molestie, sit amet interdum sem pretium. Fusce pharetra aliquam metus in finibus. Maecenas efficitur dapibus dui non posuere. Fusce tristique turpis arcu, vitae congue massa ornare in. Etiam et luctus nisi. Integer sem magna, fringilla at dui consequat, congue condimentum purus. Aliquam sit amet vulputate nunc. Proin accumsan diam vel consequat vehicula. Quisque magna odio, vestibulum molestie metus non, sollicitudin semper quam.

Sed et sodales orci, sed laoreet eros. Vestibulum viverra lacus accumsan turpis tristique convallis. 
      <mark>
        Lorem
      </mark>
       
      <mark>
        ipsum
      </mark>
       dolor sit amet, consectetur adipiscing elit. 
      <mark>
        Lorem
      </mark>
       
      <mark>
        ipsum
      </mark>
       dolor sit amet, consectetur adipiscing elit. Sed vitae faucibus neque. Morbi blandit felis quis fringilla auctor. Fusce mi erat, imperdiet pharetra elit vel, pulvinar facilisis elit. Nulla aliquam magna sed ligula mattis tempor. Quisque rutrum est sit amet 
      <mark>
        ipsum
      </mark>
       posuere, auctor facilisis nisi accumsan. Proin ultricies justo in tortor pharetra consequat. Suspendisse potenti. Praesent interdum nunc sed enim gravida porta.
    </div>
  </div>
</div>
`;
